[project]
name = "video-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "dotenv>=0.9.9",
    "langchain-anthropic>=1.4.1",
    "streamlit>=1.57.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
